# PayCycle

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: package.json
backend/src/: index.ts
contracts/: Cargo.toml
contracts/keeper/: Cargo.toml
contracts/keeper/src/: lib.rs
contracts/subscription/: Cargo.toml
contracts/subscription/src/: errors.rs  events.rs  lib.rs  test.rs  types.rs
contracts/subscription/test_snapshots/test/: test_cancel_subscription.1.json  test_create_plan.1.json  test_execute_payment.1.json  test_initialize.1.json  test_pause_resume.1.json  test_payment_not_due.1.json  test_spending_cap_enforcement.1.json  test_subscribe.1.json  test_unauthorized_cancel.1.json
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
docs/: architecture.md  security-checklist.md  user-feedback.md  user-guide.md
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/plans/: page.tsx
frontend/src/app/subscribe/: page.tsx
frontend/src/components/: Providers.tsx
frontend/src/components/subscription/: CreatePlanForm.tsx  PlanCard.tsx  SubscriptionCard.tsx
frontend/src/components/transaction/: SendXLM.tsx  SubscriptionTest.tsx  TxStatus.tsx
frontend/src/hooks/: useBalance.ts  useSubscription.ts  useWallet.ts
frontend/src/lib/: contracts.ts  stellar.ts
frontend/src/types/: subscription.ts
sdk/: package.json
sdk/src/: index.ts
(+6 files in other folders)
