[workspace]
resolver = "2"
members = [
    "subscription",
    # "token",    # Uncomment at Green Belt
    # "keeper",   # Uncomment at Green Belt
]

[workspace.dependencies]
soroban-sdk = "21.7.4"
soroban-token-sdk = "21.7.4"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
